# VeRLPy

./: .gitignore  LICENSE.txt  README.md  setup.cfg
COO_compressor/hw_modules/: Makefile
COO_compressor/tb_without_rl/: Makefile  test_coo_compressor_cocotb.py
COO_decompressor/hw_modules/: Makefile  coo_decompression.bsv
COO_decompressor/tb_without_rl/: test_coo_decompression.py
RLE_compressor/: .gitignore
RLE_decompressor/hw_modules/: Makefile  rle_decompression.bsv
RLE_decompressor/tb_without_rl/: Makefile  test_rle_decompression.py
RLE_verif_with_RL/: .gitignore
RLE_verif_with_RL/RLE_compressor_1state/: Makefile  old_test.py  results.xml  test_1state_RL_helper.py  test_1state_RL_rle_compression.py  test_rle_compression_cocotb.py
RLE_verif_with_RL/RLE_compressor_1state_transitions/: Makefile  results.xml  test_1state_RL_rle_compression_transitions.py  test_rle_compression_cocotb.py
RLE_verif_with_RL/RLE_compressor_base/: Makefile  mkrle_compression.v  test_base_random_rle_compression.py  test_rle_compression_cocotb.py
RLE_verif_with_RL/RLE_compressor_probability/: Makefile  results.xml  test_1state_RL_helper.py  test_1state_probab_RL_rle_compression.py  test_rle_compression_cocotb.py
RLE_verif_with_RL/RLE_compressor_probability_random/: Makefile  results.xml  test_1state_probab_random_rle_compression.py
axi4_fabric_rl/: Makefile  RL_helper.py  cocotb_helper.py  config.ini  merge_plot.py  plot.py  test_axi_fabric.py  test_axi_fabric_helper.py
hw_modules/: rle_compression.bsv
tb_without_rl/: Makefile  test_rle_compression.py
(+216 files in other folders)
