[metadata]
name = verlpy
version = 0.9.0
author = Aebel Joe Shibu
author_email = aebeljs@gmail.com
description = A library to use Reinforcement Learning (RL) for digital hardware verification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aebeljs/VeRLPy
project_urls =
    Bug Tracker = https://github.com/aebeljs/VeRLPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    cocotb
    gym
    stable_baselines3

[options.packages.find]
where = src